<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/disney_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/disney_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/disney_image"
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:contentDescription="@string/disney_image"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/random_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button"
        android:onClick="randomizeButton"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/click" />
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:onClick="reset"
        />

    <ScrollView
        android:id="@+id/disney_bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/disney_bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:lineSpacingExtra="8sp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:text="@string/main"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>